# macGL

./: CMakeLists.txt
res/shader/: fragment.txt  lightFragment.txt  lightVertex.txt  planeVertex.txt  trFrag.txt  trVert.txt  vertex.txt
src/: glad.c  main.cpp
src/render/: ShaderProgram.cpp  ShaderProgram.h  texture2D.cpp  texture2D.h
src/resources/: Collider.cpp  Collider.h  Collision.h  Mesh.h  Model.cpp  Model.h  MyFormat.cpp  MyFormat.h  PickingObject.cpp  PickingObject.h  ResourceManager.cpp  ResourceManager.h  camera.cpp  camera.h  sprite.cpp  sprite.h
